processed/gerrit/txt_full/53263.txt
Change:     53263
Subject:    LU-16291 build: make kobj_type constant
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/53263
Change-Id:  I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Project:    fs/lustre-release
Branch:     b2_12
Status:     MERGED
Owner:      Jian Yu
Created:    2023-11-28 06:54:30.000000000
Updated:    2024-02-27 05:40:28.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)
Topic:      LTS12

--- Labels ---
  Code-Review: Shaun Tancheff: +1; Andreas Dilger: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Shaun Tancheff

--- Commit Message ---
LU-16291 build: make kobj_type constant

Kernel v5.16-rc2-28-gee6d3dd4ed48:
commit ee6d3dd4ed48ab24b74bab3c3977b8218518247d
driver core: make kobj_type constant.

This patch makes struct kobj_type constant to fix
the following build failure against kernel 5.16:

lustre/obdclass/obd_config.c: In function 'class_modify_config':
lustre/obdclass/obd_config.c:1639:13: error: assignment discards
'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
1639 |         typ = get_ktype(kobj);
     |             ^

Lustre-change: https://review.whamcloud.com/49043
Lustre-commit: d1dbf26afd6676e02a2a00e635b9ad1fe14cf68e

Signed-off-by: Jian Yu <yujian@whamcloud.com>
Change-Id: I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53263
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2023-11-28 06:54:30.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2023-11-28 06:55:25.000000000) ---
Patch Set 1:

Builds for x86_64 centos7 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/37835/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests@zfs

--- Message (wc-checkpatch, 2023-11-28 06:58:30.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2023-11-28 07:00:18.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/37835/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2023-11-28 07:14:48.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/100538/ : SUCCESS

--- Message (Maloo, 2023-11-28 07:15:33.000000000) ---
Patch Set 1:

The following sessions will be run for build 100538 patch 1

Enforced:
- review-ldiskfs on el7.9-x86_64/ldiskfs servers and clients
- review-zfs on el7.9-x86_64/zfs servers and clients
- review-dne-part-1 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-2 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-3 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-4 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-5 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-6 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-7 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-zfs-part-1 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-2 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-3 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-4 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-5 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-6 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-7 on el7.9-x86_64/zfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=100538&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=100538#redirect

--- Message (Shaun Tancheff, 2023-11-28 07:44:02.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Lustre Gerrit Janitor, 2023-11-28 09:31:10.000000000) ---
Patch Set 1:

Testing has completed with errors!

> replay-single@ldiskfs+DNE Server crashed(8880s)
- (LU-11556)
> sanity2@ldiskfs+DNE Client crashed(1540s)
- (LU-14788)

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/37835/results.html

--- Message (Maloo, 2023-11-28 19:59:49.000000000) ---
Patch Set 1:

Failed enforced test review-dne-zfs-part-1 on CentOS 7.9/x86_64 uploaded by Trevis Autotest 2 from trevis-55vm1: https://testing.whamcloud.com/test_sessions/8657c3ef-5e4c-453b-893d-4149d138dc80 ran 4 tests.  1 tests failed: sanity.

--- Message (Maloo, 2023-11-29 00:41:58.000000000) ---
Patch Set 1: Verified-1

Passed enforced test review-dne-part-3 on CentOS 7.9/x86_64 uploaded by Onyx Autotest 2 from onyx-75vm1: https://testing.whamcloud.com/test_sessions/9766e68a-606d-4f15-bf0d-bb0cca065d1f ran 3 tests.

--- Message (Autotest, 2023-11-29 00:56:09.000000000) ---
Patch Set 1:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-1 session on el7.9-x86_64/zfs servers and clients for build 100538 patch 1. Requested by jianyu because of LU-12207.

--- Message (Maloo, 2023-11-29 04:10:17.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-dne-zfs-part-1 on CentOS 7.9/x86_64 uploaded by Trevis Autotest 2 from trevis-45vm2: https://testing.whamcloud.com/test_sessions/9cd68eb7-dab2-40b9-9666-b08810d20fb6 ran 4 tests.

--- Message (Andreas Dilger, 2024-02-21 01:18:02.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2024-02-21 01:40:44.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Andreas Dilger, 2024-02-21 01:40:49.000000000) ---
Topic set to LTS12

--- Message (Oleg Drokin, 2024-02-27 05:40:28.000000000) ---
Change has been successfully cherry-picked as eefca0a2a1e4e840ced50c0a458d2c697c5c606a by Oleg Drokin
